--- a/app/index.css
+++ b/app/index.css
@@ -100,3 +100,11 @@ body {
   margin: 0;
   line-height: inherit
 }
+
+
+.AccordionChevron {
+  transition: transform 300ms;
+}
+.AccordionTrigger[data-state='open'] > .AccordionChevron {
+  transform: rotate(180deg);
+}
